--- a/package.json
+++ b/package.json
@@ -28,5 +28,16 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "vite": "^5.2.0"
-  }
+  },
+  {
+    "name": "namitask",
+    "version": "1.0.0",
+    "private": true,
+    "homepage": "/",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "test": "jest"
+    },
 }
