--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "vite": "^5.2.0"
   }
 }
